ping-pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ping-pong
  namespace: exercises

spec:
  replicas: 1

  selector:
    matchLabels:
      app: ping-pong

  template:
    metadata:
      labels:
        app: ping-pong

    spec:
      containers:
        - name: ping-pong
          image: olekacak/ping-pong:2.7
          imagePullPolicy: Always
          command: ["sh", "-c", "php -S 0.0.0.0:8000 -t public"]

          ports:
            - containerPort: 8000
