ping-pong/manifests/service-gke.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: exercises
spec:
  type: LoadBalancer
  selector:
    app: ping-pong
  ports:
    - port: 80
      targetPort: 8000
